apps/internal-ingresses/rethink-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rethink-ingress-internal
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: "internal-ca"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - secretName: rethink-internal-tls
      hosts:
        - rethink.internal
  rules:
    - host: rethink.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rethink
                port:
                  number: 44401
